add notice api
